# nbdev_cards

./: README.md  card.html  card.html.md  deck.html  deck.html.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
nbdev_cards/: _modidx.py  card.py  deck.py
nbs/: 00_card.ipynb  01_deck.ipynb  index.ipynb  nbdev.yml
